log
Thu, Apr 17, 2025  7:04:09 PM: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'createMap':
hashmap.c:57:33: error: returning 'int' from a function with return type 'HashMap *' {aka 'struct HashMap *'} makes pointer from integer without a cast [-Werror=int-conversion]
     if (newMapa == NULL) return EXIT_FAILURE;
                                 ^~~~~~~~~~~~
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:438:47: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
                                               ^~~                  ~~~
test.c:439:26: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
                          ^~~               ~~~
test.c:442:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
                 ^~~                                                                                                                                                                                           ~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Thu, Apr 17, 2025  7:04:45 PM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:438:47: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
                                               ^~~                  ~~~
test.c:439:26: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
                          ^~~               ~~~
test.c:442:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
                 ^~~                                                                                                                                                                                           ~~~
cc1.exe: all warnings being treated as errors
c7ec1bf
Thu, Apr 17, 2025  7:09:19 PM: 
 tests:  0|0
e19abbf
Thu, Apr 17, 2025  7:13:33 PM: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e9ac0b0
Thu, Apr 17, 2025  7:31:43 PM: 
 hashmap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  1|5
total_score: 10/70
3564a47
Thu, Apr 17, 2025  7:33:11 PM: 
 hashmap.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  4|5
total_score: 20/70
f2aef02
Thu, Apr 17, 2025  7:35:35 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
4d51b90
Thu, Apr 17, 2025  7:36:45 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
08910e0
Thu, Apr 17, 2025  7:50:31 PM: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
2730dbb
Fri, Apr 18, 2025  1:34:09 PM: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
a8123ea
Fri, Apr 18, 2025  1:39:35 PM: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
e3f2344
Fri, Apr 18, 2025  1:40:29 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
1470daa
